# Bubble_Sheet

./: .gitignore  Bubble_Sheet.spec  Portable_Sheet_Readme.txt  README.md  main.py  pyproject.toml  test.py
src/: Bubble_Sheet.py  Constants.py  Convert.py  OMR.py  OMR_Scantron.py  Scantron.py  main.py  notes.txt  output.txt  pyinamgesearch.py  raw_data.py  scantron_bubbles.py  score_sheet.py  test.py
