[tool.poetry]
name = "bubble-sheet"
version = "0.1.0"
description = ""
authors = ["William Bodeis <wdbodeis@gmail.com>"]
readme = "README.md"
packages = [{include = "bubble_sheet"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
numpy = "^1.24.1"
imutils = "^0.5.4"
argparse = "^1.4.0"
opencv-python = "^4.7.0.68"
pillow = "^9.4.0"
scipy = "^1.10.0"
matplotlib = "^3.6.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
