[tool.poetry]
name = "bubble-sheet"
version = "0.2.0"
description = ""
authors = ["William Bodeis <wdbodeis@gmail.com>"]
readme = "README.md"
packages = [{include = "bubble_sheet"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
numpy = "^1.24.1"
opencv-python = "^4.7.0.68"
pillow = "^9.4.0"
pdf2image = "^1.16.2"
pandas = "^1.5.3"
pyinstaller = "^5.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
